--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "multer": "1.4.5-lts.1",
+    "node-cron": "^3.0.2",
+    "nodemon": "^2.0.22",
+    "request": "^2.88.2"
   }
 }
