--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,16 @@
     "antd": "^5.3.3",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
