--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "multer": "1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
+    "react-toastify": "^9.1.2",
     "request": "^2.88.2"
   }
 }
